feat: Additional Docker dependency cleanup and health indicator improvements
- Remove docker-compose-localstack.yml from wifi-scan-queue-consumer
- Update SSL certificate health indicators with enhanced functionality
- Improve BatchFirehoseMessageServiceTest
- Update wifi measurement S3 table schema documentation
- Continue Docker dependency removal across the pipeline